Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2.2
-
Fix Version/s: 10.2.2
-
Labels:None
Description
mysqld: /home/nirbhay/project/git-repo/maria/10.2/sql/mysqld.cc:2144: void mysqld_exit(int): Assertion `global_status_var.global_memory_used == 0' failed.
|
 |
Program received signal SIGABRT, Aborted.
|
0x00007ffff6159c37 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
|
56 ../nptl/sysdeps/unix/sysv/linux/raise.c: No such file or directory.
|
(gdb) bt
|
#0 0x00007ffff6159c37 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
|
#1 0x00007ffff615d028 in __GI_abort () at abort.c:89
|
#2 0x00007ffff6152bf6 in __assert_fail_base (fmt=0x7ffff62a33b8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n",
|
assertion=assertion@entry=0x55555639e6a0 "global_status_var.global_memory_used == 0",
|
file=file@entry=0x55555639e3d8 "/home/nirbhay/project/git-repo/maria/10.2/sql/mysqld.cc", line=line@entry=2144,
|
function=function@entry=0x5555563a6480 <mysqld_exit(int)::__PRETTY_FUNCTION__> "void mysqld_exit(int)")
|
at assert.c:92
|
#3 0x00007ffff6152ca2 in __GI___assert_fail (assertion=0x55555639e6a0 "global_status_var.global_memory_used == 0",
|
file=0x55555639e3d8 "/home/nirbhay/project/git-repo/maria/10.2/sql/mysqld.cc", line=2144,
|
function=0x5555563a6480 <mysqld_exit(int)::__PRETTY_FUNCTION__> "void mysqld_exit(int)") at assert.c:101
|
#4 0x000055555598ccd1 in mysqld_exit (exit_code=0) at /home/nirbhay/project/git-repo/maria/10.2/sql/mysqld.cc:2144
|
#5 0x000055555599456e in mysqld_main (argc=21, argv=0x7ffff54503c0)
|
at /home/nirbhay/project/git-repo/maria/10.2/sql/mysqld.cc:6068
|
#6 0x0000555555989485 in main (argc=2, argv=0x7fffffffde18)
|
at /home/nirbhay/project/git-repo/maria/10.2/sql/main.cc:25
|
Attachments
Issue Links
- links to