MDEV-10492: Assertion failure on shutdown when wsrep_sst_auth set in config

The memory alloc-ed initially for wsrep_sst_auth to store the
value specified in config was lost as the global variable was
reset while in process of masking it and thus, could never be
reclaimed on shutdown.