sql/wsrep_sst.cc
@@ -169,10 +169,9 @@ bool wsrep_sst_auth_update (sys_var *self, THD* thd, enum_var_type type)
     return sst_auth_real_set (wsrep_sst_auth);
 }
 
-void wsrep_sst_auth_init (const char* value)
+void wsrep_sst_auth_init ()
 {
-    if (wsrep_sst_auth == value) wsrep_sst_auth = NULL;
-    if (value) sst_auth_real_set (value);
+  sst_auth_real_set(wsrep_sst_auth);
 }
 
 bool  wsrep_sst_donor_check (sys_var *self, THD* thd, set_var* var)
